adapted speciation for post gen1 populations